--- a/PonyRescue/PonyRescue.csproj
+++ b/PonyRescue/PonyRescue.csproj
@@ -71,13 +71,18 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="GameSate.cs" />
+    <Compile Include="PathfindingLogic\Chamber.cs" />
+    <Compile Include="PathfindingLogic\Coordinates.cs" />
+    <Compile Include="PathfindingLogic\Direction.cs" />
+    <Compile Include="PathfindingLogic\GameSate.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PathfindingLogic\MazeState.cs" />
+    <Compile Include="PathfindingLogic\Pathfinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
